deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  greet-api
  namespace: skaffold-k8s-example
  labels:
    app:  greet-api
spec:
  selector:
    matchLabels:
      app: greet-api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  greet-api
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  greet-api
        image:  europe-west1-docker.pkg.dev/darrensemusemu-infra/skaffold-k8s-example/greet-api
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
              cpu: 10m
              memory: 10Mi
            # TODO:i
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/alive
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        # env:
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: greet-api
        #       key: DB_HOST
        ports:
        - containerPort: 8080
          name:  http
        # volumeMounts:
        # - name: localtime
        #   mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
