deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greet-api
  namespace: skaffold-k8s-example
spec:
  selector:
    app: greet-api
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
